<resources>
    <string name="app_name">My Application</string>
    <string name="login_akherat">Login Akherat</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="register">Register</string>
    <string name="wonk_pusat">WONK PUSAT</string>
</resources>
